apps/media/overseerr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requests.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
          namespace: media
      middlewares:
        - name: traefik-sso@kubernetescrd
        - name: traefik-redirect-scheme@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
